--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -56,7 +56,9 @@ http://2018.igem.org/wiki/images/2/28/T--GO_Paris-Saclay--methotrexittire.png
 
 <div id="text3">Some paper, says that if no mitigation action is taken, this environmental threat will increase up to <strong>65%</strong> by 2050 for some drugs.</div>
 
-  <br style="position: absolute; top: 1000vh">
+
+  <img style="position: absolute; top: 275vh" src="http://2018.igem.org/wiki/images/5/5b/T--GO_Paris-Saclay--footerespace.png" class="superposedbanner1">
+
 
 </div>
 
