--- a/src/app/support-section/support-section.component.html
+++ b/src/app/support-section/support-section.component.html
@@ -45,11 +45,11 @@
 
     <h2>Special thanks</h2>
 
-    We would like to thank Raphaël Labruère who gave us 110 mg of Methotrexate, It permitted us to do several degradation test for our project.
+    We would like to thank Raphaël Labruère who gave us 110 mg of Methotrexate, It allowed us to do all of the planned degradation test for our project !
 <br><br>
-    We thank Marie Claude Serre from the I2BC lab. She alone, gave us tons of material we needed for our experimentation. Without her the Summer lab would have been different.
+    We thank Marie Claude Serre from the I2BC lab. She alone, gave us tons of material we needed for our experimentation. Without her the Summer lab would not have been the same !
 <br><br>
-    A big thank to Herve Leh, Research Engineer at the I2BC who gave us plenty of tips at the beginning of the lab time.
+    A big thank to Herve Leh, Research Engineer at the I2BC who gave us plenty of tips at the beginning of the lab time, and supervised us during the summer !
 <br><br>
   </mat-card>
 
