--- a/src/gops_theme.scss
+++ b/src/gops_theme.scss
@@ -281,12 +281,87 @@ a {
   width:100%;
 }
 
+.wideimg {
+  width: 100%;
+  margin-top : 1em;
+  margin-bottom : 1em;
+}
 
+.semiwideimg {
+  width: 60%;
+  margin: 1em auto;
+}
+
+.centeredcard {
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
+
+.centerstuff {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.eatintotextmargin {
+  width: 116%;
+  margin: 1.2em -8%;
+}
+
+.captionafterapicture {
+  font-size : 11pt;
+  color: grey;
+}
+
+.captionmaterialmethod {
+  font-size: 10pt;
+  font-style: italic;
+}
+
+.intermediateconclusion {
+  border-left: 2px solid #0d47a1 ;
+  padding-left: 4px;
+}
+
+.withlettrine::first-letter  {
+  float:left;
+  font-size: 6em;
+  padding: 0.05em 0.05em 0 0;
+}
+
+.formoredetailssee {
+  font-size: 14pt;
+  font-style: italic;
+  color: darkslategray;
+  border-left: 2px solid goldenrod;
+  padding-left: 4px;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+
+.sidefigure {
+  float:right;
+  width: 50%;
+  margin-left: 1em;
+  margin-right: -20%;
+}
+
+
+.dashboard-card {
+  overflow: auto;
+  text-align: left;
+}
+
+.largemargin {
+  padding-left: 15% !important;
+  padding-right: 15% !important;
+}
 
 /* Centered text */
 .headlinetext {
   position: absolute;
-  top: 50%;
+  top: 48%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
@@ -299,7 +374,7 @@ a {
 .bannercontainer {
   position: relative;
   text-align: center;
-  background-color: blue;
+  background-color: black;
 }
 
 .superposedbanner1 {
