--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
           </li>
           <li ><a (click)="this.routerLinkChunkProcessing('/biology/mtx')" ><span>Degrading MTX</span></a>
           </li>
-          <li ><a href='http://2018.igem.org/Team:GO_Paris-Saclay/heterogenious'><span>An HeteroGeneous System</span></a>
+          <li ><a (click)="this.routerLinkChunkProcessing('/biology/heterogenious')" ><span>An HeteroGenious System</span></a>
           </li>
         </ul>
       </li>
