--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -169,6 +169,157 @@
     longer (20 h) allow the bacteria to remove a toxic compound from the medium.
   </p>
 
+  <p>
+  <b>In conclusion: The bacteria harboring a plasmid encoding cpg2 are ‘MTX-Cleaning Factories’ that efficiently remove MTX from the medium.</b>
+  </p>
+  <p class="spacemaker"></p>
+  <h1>Toward a ‘HeteroGenious’ expression of BioBricks</h1>
+  <div class="formoredetailssee">For a more detailled view, see <a (click)="this.router.navigate(['/biology','heterogenious'], { fragment: 'top'})">HeteroGenious expression</a></div>
+
+  <mat-card class="sidefigure">
+    <svg class="lee5explainer" viewBox="0 0 250 100">
+      <g
+        id="layer1-7"
+        inkscape:label="Layer 1"
+        transform="translate(0.21045238,11.007044)">
+        <path
+          inkscape:connector-curvature="0"
+          id="DNA_tractline"
+          d="M 24.273365,68.217281 H 199.06763"
+          style="fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.70000005;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+        />
+        <rect
+          y="59.248367"
+          x="82.020828"
+          height="15.501633"
+          width="105.83334"
+          id="GFP_gene"
+          style="opacity:1;fill:#50b47b;fill-opacity:1;stroke:none;stroke-width:2.04960823;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1"
+        />
+        <path
+          inkscape:connector-curvature="0"
+          id="LEE5_Prom_Arrow"
+          d="M 56.126599,68.217279 V 54.051998 h 9.621705"
+          style="fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.70000005;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;marker-end:url(#Arrow1Send)"
+        />
+        <text
+         xml:space="preserve"
+         style="font-style:normal;font-variant:normal;font-weight:300;font-stretch:normal;font-size:10.58333302px;line-height:125%;font-family:'Source Sans Pro';-inkscape-font-specification:'Source Sans Pro, Light';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;fill:#000000;fill-opacity:1;stroke:none;stroke-width:0.26458332px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+         x="126.95313"
+         y="70.528824"
+         id="GFP_Label"
+         ><tspan
+           x="126.95313"
+           y="70.528824"
+           id="tspan2612"
+           style="stroke-width:0.26458332px"><tspan
+             x="126.95313"
+             y="70.528824"
+             id="tspan2610"
+             style="stroke-width:0.26458332px">GFP</tspan></tspan></text>
+      <text
+         xml:space="preserve"
+         style="font-style:normal;font-weight:normal;font-size:10.58333302px;line-height:125%;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;fill:#000000;fill-opacity:1;stroke:none;stroke-width:0.26458332px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+         x="46.903778"
+         y="77.547478"
+         id="LEE5_Label"><tspan
+           x="46.903778"
+           y="77.547478"
+           id="tspan2618"
+           style="stroke-width:0.26458332px"><tspan
+             x="46.903778"
+             y="77.547478"
+             style="font-style:italic;font-variant:normal;font-weight:300;font-stretch:normal;font-size:10.58333302px;font-family:'Source Sans Pro';-inkscape-font-specification:'Source Sans Pro, Light Italic';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start;writing-mode:lr-tb;text-anchor:start;stroke-width:0.26458332px"
+             id="tspan2616">LEE5</tspan></tspan></text>
+        <path
+          style="fill:#ff3800;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+          d="M 51.645202,28.269915 H 40.589667 l -5.918626,-5.459935 5.806954,-5.047855 h 11.055534 l -5.471928,5.047855 5.471928,5.047857 z"
+          id="HNS" />
+        <path
+          style="fill:#ff3800;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+          d="M 51.645202,28.269915 H 40.589667 l -5.918626,-5.459935 5.806954,-5.047855 h 11.055534 l -5.471928,5.047855 5.471928,5.047857 z"
+          id="HNS2" />
+        <path
+          style="fill:#ff3800;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+          d="M 51.645202,28.269915 H 40.589667 l -5.918626,-5.459935 5.806954,-5.047855 h 11.055534 l -5.471928,5.047855 5.471928,5.047857 z"
+          id="HNS3" />
+        <path
+          style="fill:#ff3800;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+          d="M 51.645202,28.269915 H 40.589667 l -5.918626,-5.459935 5.806954,-5.047855 h 11.055534 l -5.471928,5.047855 5.471928,5.047857 z"
+          id="HNS4" />
+        <path
+          style="fill:#ee9942;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+          d="m 85.950738,27.608459 h -11.05554 l -5.918624,-5.459936 5.806954,-5.047855 h 11.05553 c 0.08057,3.365533 0.03878,6.730179 0,10.095713 z"
+          id="Ler" />
+
+
+        <path
+          style="fill:#216398;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:0.26458332px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+          d="m 159.90191,38.635006 h -17.37252 c -8.7785,-1.214539 -7.30392,-5.148532 -9.35443,-8.285353 -8.62849,2.681416 -7.43344,0.162134 -10.69078,0 -5.48854,-9.664339 -5.93783,-14.587134 0.66817,-10.022609 14.65528,0 23.60451,-8.559072 43.96584,0 0.38289,7.845351 -1.89798,14.025855 -7.21628,18.307962 z"
+          id="RNA_Pol" />
+        <path
+          style="fill:none;fill-opacity:1;fill-rule:evenodd;stroke:#000000;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:12.00000033, 2.00000006;stroke-dashoffset:0;stroke-opacity:1"
+          d="M 133.69158,10.972607 120.86266,2.9545174 h -16.43709 v -4.9444776 h 16.43709 l 12.82892,7.4067856 z"
+          id="RNA" />
+
+        <text
+          x="32.673473"
+          y="14.795038"
+          id="HNSLabel"
+        >H-NS</text>
+
+        <text
+          x="71.794014"
+          y="13.472123"
+          id="LerLabel">Ler</text>
+
+        <text
+          x="71.794014"
+          y="13.472123"
+          id="RNAPolLabel">RNA Polymerase</text>
+
+
+      </g>
+    </svg>
+    <div class="mat-caption captionafterapicture">Figure 8 : Interplay between Ler and H-NS for the modulation of LEE5 promoter activity
+      <br>
+      <div class="captionmaterialmethod">
+        Ler is a nucleoid associated protein encoded by LEE (locus of enterocyte effacement)
+        genomic island encoding a secretion system in enteropathogenic E. coli. For the project, we used ler and its target DNA,
+        a small part of LEE island containing the promoter region of the 5th operon, named LEE5. This region has been shown to
+        be recognized by two nucleoid-associated proteins, H-NS and Ler.  H-NS and Ler belong to the same family of protein of
+        proteins qualified as ‘silencers’ of foreign DNA expression, the H-NS family. However, it has been reported that Ler can
+        counteract the H-NS silencing on the LEE island.
+      </div>
+    </div>
+  </mat-card>
+
+
+  <p>
+  While analysing the growth of our chassis strain (WT and &Delta;tolC strain) in absence or presence of MTX, we noticed that the strains harboring pSB1C3-folC-cpg2 present a growth delay/defect.
+    More generally, BioBrick expression and/or drug degradation may be toxic for the chassis strains, and can be detrimental
+    for the long term maintenance of a cleaning bioreactor ;
+    anti-cancer drugs degradation pathways may be especially affected, given these drugs target very basic mecanism of life,
+    likely to be conserved from bacteria to man.
+  </p><p>
+    Therefore we wanted our bioreactor to harbor a heterogeneous bacterial population so that all of them will not express
+  the degradation pathway at the same time. This system is so called ‘HeteroGenious’ since it generates ‘ingenious’ heterogeneity within the ‘cleaning factory’ population.
+  </p>
+
+  <p>
+    We took advantage of a recently described regulation system that can generate bimodal
+    expression patterns in E. coli<reference-box shorthand="Leh2017"></reference-box>. Only two components must be provided to
+    implement this ‘heterogenious’ system in E. coli: LEE5 promoter region and the gene encoding
+    Ler (‘LEE encoded regulator’). The <i>E. coli</i> endogeneous H-NS silencer also plays a part in the system : the competition between H-NS and Ler for LEE5 binding can
+    generate some heterogeneity of transgene expression within E. coli populations<reference-box shorthand="Leh2017"></reference-box> (Figure 8).
+  </p>
+  <p>
+    Since H-NS is naturally present in E. coli, our synthetic system requires only the expression of Ler and a transgene
+    under the control of LEE5. We analyzed the expression of gfp under the control of LEE5 promoter as proof of concept.
+    The resulting population was heterogeneous regarding GFP expression since one sub-population expressed GFP and the other didn’t (Figure 9).
+
+  </p>
+
 
 </mat-card>
 
