--- a/src/gops_theme.scss
+++ b/src/gops_theme.scss
@@ -323,6 +323,12 @@ a {
   padding-left: 4px;
 }
 
+
+.spacemaker {
+  margin-top: 4em;
+}
+
+
 .withlettrine::first-letter  {
   float:left;
   font-size: 6em;
