--- a/src/gops_theme.css
+++ b/src/gops_theme.css
@@ -1924,6 +1924,9 @@ a {
   border-left: 2px solid #0d47a1;
   padding-left: 4px; }
 
+.spacemaker {
+  margin-top: 4em; }
+
 .withlettrine::first-letter {
   float: left;
   font-size: 6em;
