--- a/src/app/modeling/modeling.component.html
+++ b/src/app/modeling/modeling.component.html
@@ -1,7 +1,8 @@
-<div class="grid-container">
-  <h1 class="mat-h1">Modeling</h1>
-
-  <mat-card class="dashboard-card" >
-
-  </mat-card>
+<div class="bannercontainer" id="top">
+  <img src="http://2018.igem.org/wiki/images/1/1b/T--GO_Paris-Saclay--tableau_banner.png" class="bannerimg superposedbanner1">
+  <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png" class="bannerimg superposedbanner2">
+  <div class="headlinetext">Model</div>
 </div>
+
+<mat-card class="dashboard-card largemargin">
+</mat-card>
